--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "files_manager",
+  "name": "Eventify",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-node": "0.0.1-security",
     "bull": "^3.16.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
