--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,12 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-node": "0.0.1-security",
+    "@babel/core": "^7.24.0",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/register": "^7.23.7",
+    "babel-node": "^0.0.1-security",
     "bull": "^3.16.0",
     "chai-http": "^4.3.0",
+    "connect-redis": "^7.1.1",
     "cookie-session": "^2.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.18.0",
     "image-thumbnail": "^1.0.10",
+    "memorystore": "^1.6.7",
     "mime-types": "^2.1.27",
     "mongodb": "^3.5.9",
     "redis": "^2.8.0",
@@ -27,11 +34,6 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.0",
-    "@babel/core": "^7.8.0",
-    "@babel/node": "^7.8.0",
-    "@babel/preset-env": "^7.8.2",
-    "@babel/register": "^7.8.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^6.4.0",
