--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,12 +23,13 @@
     "chai-http": "^4.3.0",
     "connect-redis": "^7.1.1",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
     "image-thumbnail": "^1.0.10",
     "memorystore": "^1.6.7",
     "mime-types": "^2.1.27",
-    "mongodb": "^3.5.9",
+    "mongodb": "^6.5.0",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.2.0"
