--- a/back-end/package.json
+++ b/back-end/package.json
@@ -30,8 +30,10 @@
     "memorystore": "^1.6.7",
     "mime-types": "^2.1.27",
     "mongodb": "^4.5.0",
+    "multer": "^1.4.5-lts.1",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
+    "supertest-session": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^8.2.0"
